# TodoApp

./: CMakeLists.txt  README.md  checkboxdelegate.cpp  checkboxdelegate.h  data.sql  items_table_model.hpp  itemspanel.cpp  itemspanel.h  itemspanel.ui  listspanel.cpp  listspanel.h  listspanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
